# erpl-airbyte-connectors

./: .gitignore  LICENSE  README.md
scripts/: build_and_push_docker_images.sh  test_spec.sh
source-sapreadtable/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
source-sapreadtable/integration_tests/: configured_catalog.json
source-sapreadtable/source_sapreadtable/: __init__.py  run.py  source.py  spec.yaml
